# typhoon

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: bindings.rs  build.rs  cli.rs  constants.rs  error.rs  keypair.rs  keys.rs  lib.rs  output.rs  scaffold.rs  security.rs  templates.rs  test.rs  utils.rs  validation.rs  workspace.rs
cli/src/checks/: mod.rs  solana.rs
cli/src/commands/: add.rs  build.rs  clean.rs  init.rs  mod.rs  test.rs
cli/src/config/: mod.rs  types.rs
cli/src/templates/: counter.rs  hello_world.rs  mod.rs  workspace.rs
cli/templates/counter/: build.rs.template  cargo.toml.template  gitignore.template  integration.rs.template  lib.rs.template
cli/templates/hello-world/: cargo.toml.template  integration.rs.template  lib.rs.template
cli/templates/workspace/: cargo.toml.template
cli/tests/: integration.rs
