[package]
name = "typhoon-cli"
description = "Typhoon CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "typhoon"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.3"
colored = "2.1"
indicatif = "0.17"
solana-pubkey = "2.1"
solana-keypair = "2.1"
solana-signature = "2.1"
solana-signer = "2.1"
cargo_metadata = "0.18"
tempfile = "3.8"
git2 = "0.18"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1.10"
