[package]
name = "typhoon-cli"
version = "0.1.0-alpha.16"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aursen"]
repository = "https://github.com/exotic-markets-labs/typhoon"
rust-version = "1.82"
description = "CLI tool for the Typhoon Solana framework"

[[bin]]
name = "typhoon"
path = "src/bin/main.rs"

[dependencies]
# CLI essentials
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Solana
solana-keypair = "3.0"
solana-pubkey = "3.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.8"
